--- a/src/app/modulos/home/home-form/home-form.component.html
+++ b/src/app/modulos/home/home-form/home-form.component.html
@@ -10,10 +10,10 @@
         <span class="d-flex justify-content-center">NOSSOS SERVIÇOS:</span><br/>
         <span class="d-flex justify-content-center">CADASTRO IMOBILIÁRIO-ISTI/IPTU/VISTORIA**APENAS INFORMAÇÕES**</span>
         <span class="d-flex justify-content-center">CONSELHO TRIBUTARIO FISCAL</span>
-        <span class="d-flex justify-content-center">GERENCIA DO SIMPLES NACIONAL</span>
-        <span class="d-flex justify-content-center">ISS DA CONTRUÇÃO CIVIL</span>
-        <span class="d-flex justify-content-center">SAUDE - ATENDIMENTO AO INTERIOR - ALTO CUSTO</span>
-        <span class="d-flex justify-content-center">SAUDE - ATENDIMENTO AO INTERIOR - MEDIA COMPLEXIDADE</span>
+        <span class="d-flex justify-content-center">GERÊNCIA DO SIMPLES NACIONAL</span>
+        <span class="d-flex justify-content-center">ISS DA CONSTRUÇÃO CIVIL</span>
+        <span class="d-flex justify-content-center">SAÚDE - ATENDIMENTO AO INTERIOR - ALTO CUSTO</span>
+        <span class="d-flex justify-content-center">SAÚDE - ATENDIMENTO AO INTERIOR - MEDIA COMPLEXIDADE</span>
         <span class="d-flex justify-content-center">SEMAD - Posse (comissionado, efetivo, disposição, mandado e reintegração)</span>
       </div>
     </div>
